# unsynn

./: .cehgit  .cehgit.conf  .gitignore  .gitsigners  .woodpecker.yml  CHANGELOG.md  COOKBOOK.md  Cargo.toml  README.md  ROADMAP.md  bacon.toml  cliff.toml  clippy.toml  release.toml
.cehgit.d/: 00cargo  10cargo-cached-artifacts  20commit-message-add-diff  20git-commit-message-diff  30cargo-check  30cargo-clippy-errors  30cargo-clippy-strict  30cargo-fmt-check  30shellcheck  40cargo-build  40cargo-build-tests  50cargo-test  50cargo-test-benches  50cargo-test-bins  50cargo-test-doc  50cargo-test-examples  50cargo-test-lib  50cargo-test-tests  50testsh-test  60cargo-audit  60cargo-miri  60cargo-msrv  60cargo-mutants  60cargo-outdated  70cargo-doc  init_cargo  mod-cargo  mod-git  mod-shellcheck
src/: cached.rs  combinator.rs  container.rs  delimited.rs  error.rs  fundamental.rs  group.rs  ident.rs  keyword_group.rs  lib.rs  literal.rs  macros.rs  operator.rs  procmacro.rs  punct.rs  quoteable.rs  rust_types.rs  transform.rs
tests/: combinator_tests.rs  container_tests.rs  debug_tests.rs  display_tests.rs  error_tests.rs  fundamental_tests.rs  group_tests.rs  literal_tests.rs  macro_tests.rs  parse_errors.rs  punct_tests.rs  quote_tests.rs  rust_types.rs  totokens_tests.rs  tt_tests.rs
