[package]
name = "unsynn"
version = "0.0.14"
edition = "2021"
authors = ["Christian Thäter <ct@pipapo.org>"]
description = "Proc-macro parsing made easy"
documentation = "https://docs.rs/unsynn"
license = "MIT OR Apache-2.0"
repository = "https://git.pipapo.org/cehteh/unsynn.git"
keywords = ["parser", "macros", "proc_macro"]
categories = ["development-tools::procedural-macro-helpers", "parser-implementations"]
readme = "README.md"
rust-version = "1.61.0"
include = ["src/**/*", "LICENSE-*", "README.md", "ROADMAP.md", "COOKBOOK.md"]

[features]
default = []
#default = ["impl_debug", "impl_display"]

impl_debug = []
impl_display = []

[dependencies]
mutants = "0.0.3"
proc-macro2 = { version = "1.0.81", features = ["proc-macro", "span-locations"]}

[lints.rust]
missing_docs = "warn"
unknown_lints = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
missing_doc_code_examples = "warn"
